test/fail_compilation/json3.d
/*
REQUIRED_ARGS: -Xifoo
TEST_OUTPUT:
---
Error: unrecognized switch '-Xifoo'
       run 'dmd -man' to open browser on manual
---
*/
